ffi/poc/cpp/corpus/nounk/include/ak_abi.h

/* ---- section 4: common vocabulary (plan.FIXED) --------------------------------- */
typedef struct ak_enc_ctx ak_enc_ctx;
typedef struct ak_dec_ctx ak_dec_ctx;
/* ABI v1 section 6: a host-driven loop over one repeated/packed/map field. */
typedef int32_t (*ak_loop_f)(ak_enc_ctx *ctx, const void *obj, int64_t token);
/* ABI v1 section 4, decode: an OFFSET into the buffer the host handed in. */
struct ak_span {
  uint32_t off;
  uint32_t len;
  uint32_t coder;
};
typedef struct ak_span ak_span;
/* Decode group for `TaskOptionsOptionsEntry`. */
struct ak_dfix_TaskOptionsOptionsEntry {
  struct ak_span key;
  struct ak_span value;
  uint32_t presence;
};
/* Decode group for `ChunkElementAttrsEntry`. */
struct ak_dfix_ChunkElementAttrsEntry {
  struct ak_span key;
  struct ak_span value;
  uint32_t presence;
};
/* Decode group for `SurrogateAttrsEntry`. */
struct ak_dfix_SurrogateAttrsEntry {
  struct ak_span key;
  struct ak_span value;
  uint32_t presence;
};
/* Decode group for `Timestamp`. */
struct ak_dfix_Timestamp {
  int64_t seconds;
  int32_t nanos;
  uint32_t presence;
};
/* Decode group for `Empty`. */
struct ak_dfix_Empty {
  uint32_t presence;
};
/* Decode group for `Probe`. */
struct ak_dfix_Probe {
  struct ak_span id;
  int32_t opt_count;
  struct ak_span opt_label;
  uint8_t opt_flag;
  uint32_t body_case;
  int64_t body_as_int;
  struct ak_span body_as_text;
  struct ak_span body_as_blob;
  struct ak_dfix_Timestamp body_as_stamp;
  struct ak_dfix_Empty body_as_nothing;
  uint32_t presence;
};
/* Decode group for `UploadResultData`. */
struct ak_dfix_UploadResultData {
  struct ak_span session_id;
  struct ak_span result_id;
  struct ak_span data_chunk;
  uint32_t presence;
};
/* Decode group for `MetricsBatch`. */
struct ak_dfix_MetricsBatch {
  struct ak_span id;
  uint32_t presence;
};
/* Decode group for `Pair`. */
struct ak_dfix_Pair {
  struct ak_span key;
  int32_t value;
  uint32_t presence;
};
/* Decode group for `ListProbeResponse`. */
struct ak_dfix_ListProbeResponse {
  uint32_t presence;
};
/* Decode group for `ListMetricsResponse`. */
struct ak_dfix_ListMetricsResponse {
  uint32_t presence;
};
/* Decode group for `UploadResultDataMessage`. */
struct ak_dfix_UploadResultDataMessage {
  struct ak_dfix_UploadResultData upload;
  uint32_t presence;
};
/* Decode group for `DualResponse`. */
struct ak_dfix_DualResponse {
  uint32_t presence;
};
/* Decode group for `ChunkLeaf`. */
struct ak_dfix_ChunkLeaf {
  struct ak_span k;
  int32_t v;
  uint32_t presence;
};
/* Decode group for `ChunkInner`. */
struct ak_dfix_ChunkInner {
  uint32_t presence;
};
/* Decode group for `ChunkElement`. */
struct ak_dfix_ChunkElement {
  struct ak_span id;
  struct ak_dfix_ChunkInner inner;
  uint32_t presence;
};
/* Decode group for `ChunkedResponse`. */
struct ak_dfix_ChunkedResponse {
  int32_t page;
  uint32_t presence;
};
/* Decode group for `ChunkedResponseWide`. */
struct ak_dfix_ChunkedResponseWide {
  uint32_t presence;
};
/* Decode group for `LeafElement`. */
struct ak_dfix_LeafElement {
  struct ak_span id;
  int64_t n;
  struct ak_dfix_Timestamp stamp;
  uint32_t presence;
};
/* Decode group for `LeafResponse`. */
struct ak_dfix_LeafResponse {
  uint32_t presence;
};
/* Decode group for `SurrogateInner`. */
struct ak_dfix_SurrogateInner {
  struct ak_span text;
  uint32_t presence;
};
/* Decode group for `Surrogate`. */
struct ak_dfix_Surrogate {
  struct ak_span text;
  struct ak_dfix_SurrogateInner nested;
  struct ak_span raw;
  uint32_t presence;
};
/* Decode group for `WireZoo`. */
struct ak_dfix_WireZoo {
  int32_t v_int32;
  int64_t v_int64;
  uint8_t v_bool;
  double v_double;
  uint32_t v_fixed32;
  struct ak_span v_string;
  struct ak_span v_bytes;
  int32_t v_enum;
  struct ak_dfix_Timestamp v_msg;
  int32_t v_big_tag;
  uint32_t presence;
};
/* Encode vtable for `MetricsBatch`. */
struct ak_evt_MetricsBatch {
  ak_loop_f loop_ticks;
  ak_loop_f loop_values;
  ak_loop_f loop_codes;
  ak_loop_f loop_flags;
  ak_loop_f loop_statuses;
};
/* Decode vtable for `ListProbeResponse` (the push family, ABI v1 section 7.1). */
struct ak_dvt_ListProbeResponse {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ListProbeResponse *);
  void (*add_probes)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_Probe *, int32_t);
};
/* Encode vtable for `ListMetricsResponse`. */
struct ak_evt_ListMetricsResponse {
  ak_loop_f loop_batches;
  const struct ak_evt_MetricsBatch *elem_batches;
};
/* Decode vtable for `ListMetricsResponse` (the push family, ABI v1 section 7.1). */
struct ak_dvt_ListMetricsResponse {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ListMetricsResponse *);
  int64_t (*new_batches)(ak_dec_ctx *, void *);
  void (*apply_batches)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_MetricsBatch *);
  void (*add_batches_ticks)(ak_dec_ctx *, void *, int64_t, const int64_t *, int32_t);
  void (*add_batches_values)(ak_dec_ctx *, void *, int64_t, const double *, int32_t);
  void (*add_batches_codes)(ak_dec_ctx *, void *, int64_t, const int32_t *, int32_t);
  void (*add_batches_flags)(ak_dec_ctx *, void *, int64_t, const uint8_t *, int32_t);
  void (*add_batches_statuses)(ak_dec_ctx *, void *, int64_t, const int32_t *, int32_t);
};
/* Encode vtable for `UploadResultDataMessage`. */
struct ak_evt_UploadResultDataMessage {
  const void *_reserved;  /* an empty struct has no defined size in C */
};
/* Decode vtable for `UploadResultDataMessage` (the push family, ABI v1 section 7.1). */
struct ak_dvt_UploadResultDataMessage {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_UploadResultDataMessage *);
};
/* Encode vtable for `DualResponse`. */
struct ak_evt_DualResponse {
  ak_loop_f loop_left;
  ak_loop_f loop_right;
};
/* Decode vtable for `DualResponse` (the push family, ABI v1 section 7.1). */
struct ak_dvt_DualResponse {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_DualResponse *);
  void (*add_left)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_Pair *, int32_t);
  void (*add_right)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_Pair *, int32_t);
};
/* Encode vtable for `ChunkLeaf`. */
struct ak_evt_ChunkLeaf {
  const void *_reserved;  /* an empty struct has no defined size in C */
};
/* Decode vtable for `ChunkLeaf` (the push family, ABI v1 section 7.1). */
struct ak_dvt_ChunkLeaf {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ChunkLeaf *);
};
/* Encode vtable for `ChunkInner`. */
struct ak_evt_ChunkInner {
  ak_loop_f loop_marks;
  ak_loop_f loop_leaves;
};
/* Decode vtable for `ChunkInner` (the push family, ABI v1 section 7.1). */
struct ak_dvt_ChunkInner {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ChunkInner *);
  void (*add_marks)(ak_dec_ctx *, void *, int64_t, const int64_t *, int32_t);
  void (*add_leaves)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_ChunkLeaf *, int32_t);
};
/* Encode vtable for `ChunkElement`. */
struct ak_evt_ChunkElement {
  ak_loop_f loop_labels;
  ak_loop_f loop_attrs;
  ak_loop_f loop_inner_marks;
  ak_loop_f loop_inner_leaves;
};
/* Decode vtable for `ChunkElement` (the push family, ABI v1 section 7.1). */
struct ak_dvt_ChunkElement {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ChunkElement *);
  void (*add_labels)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
  void (*add_attrs)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_ChunkElementAttrsEntry *, int32_t);
  void (*add_inner_marks)(ak_dec_ctx *, void *, int64_t, const int64_t *, int32_t);
  void (*add_inner_leaves)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_ChunkLeaf *, int32_t);
};
/* Encode vtable for `ChunkedResponse`. */
struct ak_evt_ChunkedResponse {
  ak_loop_f loop_items;
  const struct ak_evt_ChunkElement *elem_items;
};
/* Decode vtable for `ChunkedResponse` (the push family, ABI v1 section 7.1). */
struct ak_dvt_ChunkedResponse {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ChunkedResponse *);
  int64_t (*new_items)(ak_dec_ctx *, void *);
  void (*apply_items)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_ChunkElement *);
  void (*add_items_labels)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
  void (*add_items_attrs)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_ChunkElementAttrsEntry *, int32_t);
  void (*add_items_inner_marks)(ak_dec_ctx *, void *, int64_t, const int64_t *, int32_t);
  void (*add_items_inner_leaves)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_ChunkLeaf *, int32_t);
};
/* Encode vtable for `ChunkedResponseWide`. */
struct ak_evt_ChunkedResponseWide {
  ak_loop_f loop_items;
  const struct ak_evt_ChunkElement *elem_items;
};
/* Decode vtable for `ChunkedResponseWide` (the push family, ABI v1 section 7.1). */
struct ak_dvt_ChunkedResponseWide {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ChunkedResponseWide *);
  int64_t (*new_items)(ak_dec_ctx *, void *);
  void (*apply_items)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_ChunkElement *);
  void (*add_items_labels)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
  void (*add_items_attrs)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_ChunkElementAttrsEntry *, int32_t);
  void (*add_items_inner_marks)(ak_dec_ctx *, void *, int64_t, const int64_t *, int32_t);
  void (*add_items_inner_leaves)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_ChunkLeaf *, int32_t);
};
/* Encode vtable for `LeafElement`. */
struct ak_evt_LeafElement {
  const void *_reserved;  /* an empty struct has no defined size in C */
};
/* Decode vtable for `LeafElement` (the push family, ABI v1 section 7.1). */
struct ak_dvt_LeafElement {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_LeafElement *);
};
/* Encode vtable for `LeafResponse`. */
struct ak_evt_LeafResponse {
  ak_loop_f loop_items;
};
/* Decode vtable for `LeafResponse` (the push family, ABI v1 section 7.1). */
struct ak_dvt_LeafResponse {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_LeafResponse *);
  void (*add_items)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_LeafElement *, int32_t);
};
/* Encode vtable for `Surrogate`. */
struct ak_evt_Surrogate {
  ak_loop_f loop_attrs;
  ak_loop_f loop_texts;
};
/* Decode vtable for `Surrogate` (the push family, ABI v1 section 7.1). */
struct ak_dvt_Surrogate {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_Surrogate *);
  void (*add_attrs)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_SurrogateAttrsEntry *, int32_t);
  void (*add_texts)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
};
/* Encode vtable for `SurrogateInner`. */
struct ak_evt_SurrogateInner {
  const void *_reserved;  /* an empty struct has no defined size in C */
};
/* Decode vtable for `SurrogateInner` (the push family, ABI v1 section 7.1). */
struct ak_dvt_SurrogateInner {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_SurrogateInner *);
};
/* Encode vtable for `WireZoo`. */
struct ak_evt_WireZoo {
  const void *_reserved;  /* an empty struct has no defined size in C */
};
/* Decode vtable for `WireZoo` (the push family, ABI v1 section 7.1). */
struct ak_dvt_WireZoo {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_WireZoo *);
};
/* Encode vtable for `TaskOptionsOptionsEntry`. */
struct ak_evt_TaskOptionsOptionsEntry {
  const void *_reserved;  /* an empty struct has no defined size in C */
};
/* Decode vtable for `TaskOptionsOptionsEntry` (the push family, ABI v1 section 7.1). */
struct ak_dvt_TaskOptionsOptionsEntry {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_TaskOptionsOptionsEntry *);
};
/* Encode vtable for `ChunkElementAttrsEntry`. */
struct ak_evt_ChunkElementAttrsEntry {
  const void *_reserved;  /* an empty struct has no defined size in C */
};
/* Decode vtable for `ChunkElementAttrsEntry` (the push family, ABI v1 section 7.1). */
struct ak_dvt_ChunkElementAttrsEntry {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ChunkElementAttrsEntry *);
};
/* Encode vtable for `SurrogateAttrsEntry`. */
struct ak_evt_SurrogateAttrsEntry {
  const void *_reserved;  /* an empty struct has no defined size in C */
};