ffi/poc/codec/crates/ak-abi/src/generated_corpus_nounk/abi.rs


/// Decode vtable for `ListProbeResponse` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_ListProbeResponse {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_ListProbeResponse),
    >,
    pub add_probes: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_Probe, i32),
    >,
}

/// Encode vtable for `ListMetricsResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_ListMetricsResponse {
    pub loop_batches: Option<ak_loop_f>,
    /// The element type has loop slots of its own (ABI v1 section 6).
    pub elem_batches: *const ak_evt_MetricsBatch,
}

/// Decode vtable for `ListMetricsResponse` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_ListMetricsResponse {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_ListMetricsResponse),
    >,
    pub new_batches: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void) -> i64,
    >,
    pub apply_batches: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_MetricsBatch),
    >,
    pub add_batches_ticks: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const i64, i32),
    >,
    pub add_batches_values: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const f64, i32),
    >,
    pub add_batches_codes: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const i32, i32),
    >,
    pub add_batches_flags: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const u8, i32),
    >,
    pub add_batches_statuses: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const i32, i32),
    >,
}

/// Encode vtable for `UploadResultDataMessage`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_UploadResultDataMessage {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}

/// Decode vtable for `UploadResultDataMessage` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_UploadResultDataMessage {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_UploadResultDataMessage),
    >,
}

/// Encode vtable for `DualResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_DualResponse {
    pub loop_left: Option<ak_loop_f>,
    pub loop_right: Option<ak_loop_f>,
}

/// Decode vtable for `DualResponse` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_DualResponse {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_DualResponse),
    >,
    pub add_left: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_Pair, i32),
    >,
    pub add_right: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_Pair, i32),
    >,
}

/// Encode vtable for `ChunkLeaf`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_ChunkLeaf {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}

/// Decode vtable for `ChunkLeaf` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_ChunkLeaf {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_ChunkLeaf),
    >,
}

/// Encode vtable for `ChunkInner`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_ChunkInner {
    pub loop_marks: Option<ak_loop_f>,
    pub loop_leaves: Option<ak_loop_f>,
}

/// Decode vtable for `ChunkInner` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_ChunkInner {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_ChunkInner),
    >,
    pub add_marks: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const i64, i32),
    >,
    pub add_leaves: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_ChunkLeaf, i32),
    >,
}

/// Encode vtable for `ChunkElement`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_ChunkElement {
    pub loop_labels: Option<ak_loop_f>,
    pub loop_attrs: Option<ak_loop_f>,
    pub loop_inner_marks: Option<ak_loop_f>,
    pub loop_inner_leaves: Option<ak_loop_f>,
}

/// Decode vtable for `ChunkElement` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_ChunkElement {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_ChunkElement),
    >,
    pub add_labels: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_span, i32),
    >,
    pub add_attrs: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_ChunkElementAttrsEntry, i32),
    >,
    pub add_inner_marks: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const i64, i32),
    >,
    pub add_inner_leaves: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_ChunkLeaf, i32),
    >,
}

/// Encode vtable for `ChunkedResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_ChunkedResponse {
    pub loop_items: Option<ak_loop_f>,
    /// The element type has loop slots of its own (ABI v1 section 6).
    pub elem_items: *const ak_evt_ChunkElement,
}

/// Decode vtable for `ChunkedResponse` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_ChunkedResponse {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_ChunkedResponse),
    >,
    pub new_items: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void) -> i64,
    >,
    pub apply_items: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_ChunkElement),
    >,
    pub add_items_labels: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_span, i32),
    >,
    pub add_items_attrs: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_ChunkElementAttrsEntry, i32),
    >,
    pub add_items_inner_marks: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const i64, i32),
    >,
    pub add_items_inner_leaves: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_ChunkLeaf, i32),
    >,
}

/// Encode vtable for `ChunkedResponseWide`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_ChunkedResponseWide {
    pub loop_items: Option<ak_loop_f>,
    /// The element type has loop slots of its own (ABI v1 section 6).
    pub elem_items: *const ak_evt_ChunkElement,
}

/// Decode vtable for `ChunkedResponseWide` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_ChunkedResponseWide {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_ChunkedResponseWide),
    >,
    pub new_items: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void) -> i64,
    >,
    pub apply_items: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_ChunkElement),
    >,
    pub add_items_labels: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_span, i32),
    >,
    pub add_items_attrs: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_ChunkElementAttrsEntry, i32),
    >,
    pub add_items_inner_marks: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const i64, i32),
    >,
    pub add_items_inner_leaves: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_ChunkLeaf, i32),
    >,
}

/// Encode vtable for `LeafElement`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_LeafElement {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}

/// Decode vtable for `LeafElement` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_LeafElement {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_LeafElement),
    >,
}

/// Encode vtable for `LeafResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_LeafResponse {
    pub loop_items: Option<ak_loop_f>,
}

/// Decode vtable for `LeafResponse` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_LeafResponse {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_LeafResponse),
    >,
    pub add_items: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_LeafElement, i32),
    >,
}

/// Encode vtable for `Surrogate`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_Surrogate {
    pub loop_attrs: Option<ak_loop_f>,
    pub loop_texts: Option<ak_loop_f>,
}

/// Decode vtable for `Surrogate` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_Surrogate {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_Surrogate),
    >,
    pub add_attrs: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_SurrogateAttrsEntry, i32),
    >,
    pub add_texts: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_span, i32),
    >,
}

/// Encode vtable for `SurrogateInner`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_SurrogateInner {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}

/// Decode vtable for `SurrogateInner` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_SurrogateInner {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_SurrogateInner),
    >,
}

/// Encode vtable for `WireZoo`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_WireZoo {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}

/// Decode vtable for `WireZoo` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_WireZoo {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_WireZoo),
    >,
}

/// Encode vtable for `TaskOptionsOptionsEntry`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_TaskOptionsOptionsEntry {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}

/// Decode vtable for `TaskOptionsOptionsEntry` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_TaskOptionsOptionsEntry {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_TaskOptionsOptionsEntry),
    >,
}

/// Encode vtable for `ChunkElementAttrsEntry`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_ChunkElementAttrsEntry {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}

/// Decode vtable for `ChunkElementAttrsEntry` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_ChunkElementAttrsEntry {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_ChunkElementAttrsEntry),
    >,
}

/// Encode vtable for `SurrogateAttrsEntry`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_SurrogateAttrsEntry {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}
